--- a/Pixar Animation/Pixar.css
+++ b/Pixar Animation/Pixar.css
@@ -3,22 +3,91 @@
     margin: 0%;
     box-sizing: border-box;
 }
-
+html body{
+    width: 100%;
+    height: 100%;
+}
+p{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 .head-panel{
     height: 107px;
     display: flex;
     align-items: center;
-    letter-spacing:0.3rem;
+    letter-spacing:0.2rem;
     font-size: 16px;
     padding: 25px 28px 25px 28px;
 }
 .head-panel p{
     margin-right: 37px;
-    font-weight: bold;
+    font-weight: bolder;
     color: #000000;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .headitems{
     display: flex;
     margin-left: 50vw;
+}
+/* mid-content */
+.main-content{
+    height: 360px;
+    border: 2px solid grey;
+    margin: 40px 150px 40px 150px;
+    display: flex;
+    
+}
+.midpic2{
+    margin-top: 30px;
+}
+.midpic2 p{
+    letter-spacing: 0.2rem;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.main-content3{
+    display: flex;
+    justify-content: center;
+}
+.foot-panel{
+    height: 200px;
+    background-color: #f6f6f4;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.referal-icons{
+    margin-right: 100px;
+}
+.foot-panel  i{
+    margin-right: 10px;
+}
+.foot-panel-links{
+    margin: 0px 50px 0px 50px;
+}
+.foot-panel-links a{
+    display: block;
+    text-decoration: none;
+    color: #000000;
+    margin-top: 3px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.foot-panel-links a:hover{
+    text-decoration: underline;
+}
+.foot-panel-links p{
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    margin-bottom: 10px;
+}
+.foot-panel2{
+    text-align: center;
+    margin-bottom:50px ;
+    margin-top: 50px;
+}
+.foot-panel2 p{
+    font-size: small;
+    margin-bottom: 10px;
 }
